[package]
name = "protochain-executor"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate protochain node implementation in Rust."

[dependencies]
hex-literal = "0.1"
triehash = { version = "0.1" }
ed25519 = { git = "https://github.com/paritytech/substrate" }
substrate-codec = { git = "https://github.com/paritytech/substrate" }
substrate-runtime-io = { git = "https://github.com/paritytech/substrate" }
substrate-runtime-support = { git = "https://github.com/paritytech/substrate" }
substrate-state-machine = { git = "https://github.com/paritytech/substrate" }
substrate-executor = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
protochain-primitives = { path = "../primitives" }
protochain-runtime = { path = "../runtime" }

[dev-dependencies]
substrate-keyring = { git = "https://github.com/paritytech/substrate" }
substrate-runtime-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-runtime-staking = { git = "https://github.com/paritytech/substrate" }
substrate-runtime-system = { git = "https://github.com/paritytech/substrate" }
substrate-runtime-consensus = { git = "https://github.com/paritytech/substrate" }
